--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- bloque -->
+     <!-- textos -->
     <h1>
         prueba nuevamente
     </h1>
+    <h2>hola</h2>
+    <h6>textos</h6>
+    <p>esto es un parrafo Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur aut et maxime non maiores ipsa natus nihil. Ipsum molestiae soluta harum, itaque earum magnam, iusto labore fuga accusantium deserunt obcaecati.</p>
+    
+    <article>esto es un articulo</article>
+    <section>esto es un seccion</section>
+    <span>guillermo</span>
+    <span>sifuentes</span>
   
 </body>
 </html>
