--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <section>esto es un seccion</section>
     <span>guillermo</span>
     <span>sifuentes</span>
+
+    <img width="250px" src="./iron2.jpg" alt="robot">
   
 </body>
 </html>
