--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
 <body>
     <!-- bloque -->
      <!-- textos -->
+ <header>
+    <span>LOGO</span>
+    <nav>
+        <ol>
+            <li>INICIO</li>
+            <li>NOSOTROS</li>
+            <li>CONTACTO</li>
+        </ol>
+        <ul>
+            <li>INICIO</li>
+            <li>NOSOTROS</li>
+        </ul>
+    </nav>
+ </header>
+<!-- REDIRECCION -->
+
+<a href="https://www.google.com/" target="_blank">google</a>
+<a href="./nosotros.html">NOSOTROS</a>
+
     <h1>
         prueba nuevamente
     </h1>
@@ -20,7 +39,7 @@
     <span>guillermo</span>
     <span>sifuentes</span>
 
-    <img width="250px" src="./iron2.jpg" alt="robot">
+    <img width="250px" src="./iron2.jpg" alt="robot"/>
   
 </body>
 </html>
